# agentic_boilerplate

./: .env_example  README.md  boilerplate.ipynb  pyproject.toml  start_lgraph.ipynb
utils/: buienradar.py  chroma_db.py  llm_client.py
