[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cgraph>=0.1",
    "chromadb>=0.5.13",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.3",
    "langchain-openai>=0.2.3",
    "langchain>=0.3.4",
    "langgraph>=0.2.39",
    "langsmith>=0.1.134",
    "openai>=1.51.2",
    "pydantic>=2.9.2",
    "pygraphviz>=1.14",
    "tavily-python>=0.5.0",
    "together>=1.3.1",
]
