[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "buienradar>=1.0.6",
    "chromadb>=0.5.13",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.3",
    "langchain-openai>=0.2.3",
    "langchain>=0.3.4",
    "langgraph>=0.2.39",
    "langsmith>=0.1.134",
    "llama-index-core>=0.11.20",
    "llama-index-llms-together>=0.2.0",
    "llama-index-utils-workflow>=0.2.2",
    "llama-index>=0.11.20",
    "openai>=1.51.2",
    "pydantic>=2.9.2",
    "tavily-python>=0.5.0",
    "together>=1.3.1",
]
